--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
 
         .figura-borde-azul {
-            grid-area: 2 / 2 / 3 / 3; /;
+            grid-area: 2 / 2 / 3 / 3;
             border: 15px solid blue;
             background-color: transparent;
             z-index: 10;
@@ -87,4 +87,5 @@
     </div>
 
 </body>
+
 </html>
